# CLIP-search

./: .env.example  .gitignore  README.md  clip.py  clusterer.py  db.py  dir_scanning.py  main.py  pyproject.toml  requirements.txt
src/: clusterer.py  db.py  main.py
